Fixed extra whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,11 @@
 	position:relative;
 }
 
-@media (max-width: 991px) {
+/*@media (max-width: 991px) {
 	.cookies img {
 		margin: 0 auto;
 	}
-}
+}*/
 #contact-us {
 	background-color: #2196f3;
 	color: white;
@@ -34,6 +34,7 @@
 }
 
 .row {
+	padding-top: 20px;
 	padding-bottom: 30px;
 }
 
